p3/y.output
Terminals unused in grammar

    TOK_ASIGNACION
    TOK_CTE_ENTERA
    TOK_ERROR


State 75 conflicts: 2 shift/reduce
State 76 conflicts: 2 shift/reduce
State 87 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 6 shift/reduce
State 103 conflicts: 6 shift/reduce
State 122 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations functions statements TOK_LLAVEDERECHA

    2 declarations: declaration
    3             | declaration declarations

    4 declaration: class identifiers TOK_PUNTOYCOMA

    5 class: class_scalar
    6      | class_vector

    7 class_scalar: type

    8 type: TOK_INT
    9     | TOK_BOOLEAN

   10 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO

   11 identifiers: identifier
   12            | identifier TOK_COMA identifiers

   13 functions: function functions
   14          | %empty

   15 function: TOK_FUNCTION type identifier TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA function_declarations statements TOK_LLAVEDERECHA

   16 function_params: function_params remaining_function_params
   17                | %empty

   18 remaining_function_params: TOK_PUNTOYCOMA function_param remaining_function_params
   19                          | %empty

   20 function_param: type identifier

   21 function_declarations: declarations
   22                      | %empty

   23 statements: statement
   24           | statement statements

   25 statement: simple_statement TOK_PUNTOYCOMA
   26          | block

   27 simple_statement: assignment
   28                 | reading
   29                 | writing
   30                 | function_return

   31 block: conditional
   32      | loop

   33 assignment: identifier TOK_IGUAL exp
   34           | vector_element TOK_IGUAL exp

   35 vector_element: identifier TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   36 conditional: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA
   37            | TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

   38 loop: TOK_WHILE TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

   39 reading: TOK_SCANF identifier

   40 writing: TOK_PRINTF exp

   41 function_return: TOK_RETURN exp

   42 exp: exp TOK_MAS exp
   43    | exp TOK_MENOS exp
   44    | exp TOK_DIVISION exp
   45    | exp TOK_ASTERISCO exp
   46    | TOK_MENOS exp
   47    | exp TOK_AND exp
   48    | exp TOK_OR exp
   49    | TOK_NOT exp
   50    | identifier
   51    | constant
   52    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   53    | TOK_PARENTESISIZQUIERDO comparison TOK_PARENTESISDERECHO
   54    | vector_element
   55    | identifier TOK_PARENTESISIZQUIERDO exp_list TOK_PARENTESISDERECHO

   56 exp_list: exp exp_remaining_list
   57         | %empty

   58 exp_remaining_list: TOK_COMA exp exp_remaining_list
   59                   | %empty

   60 comparison: exp TOK_IGUAL exp
   61           | exp TOK_DISTINTO exp
   62           | exp TOK_MENORIGUAL exp
   63           | exp TOK_MAYORIGUAL exp
   64           | exp TOK_MENOR exp
   65           | exp TOK_MAYOR exp

   66 constant: constant_logic
   67         | constant_int

   68 constant_logic: TOK_TRUE
   69               | TOK_FALSE

   70 constant_int: TOK_CONSTANTE_ENTERA

   71 identifier: TOK_IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_MAIN (258) 1
    TOK_INT (259) 8
    TOK_BOOLEAN (260) 9
    TOK_ARRAY (261) 10
    TOK_FUNCTION (262) 15
    TOK_IF (263) 36 37
    TOK_ELSE (264) 37
    TOK_WHILE (265) 38
    TOK_SCANF (266) 39
    TOK_PRINTF (267) 40
    TOK_RETURN (268) 41
    TOK_PUNTOYCOMA (269) 4 18 25
    TOK_COMA (270) 12 58
    TOK_PARENTESISIZQUIERDO (271) 15 36 37 38 52 53 55
    TOK_PARENTESISDERECHO (272) 15 36 37 38 52 53 55
    TOK_CORCHETEIZQUIERDO (273) 10 35
    TOK_CORCHETEDERECHO (274) 10 35
    TOK_LLAVEIZQUIERDA (275) 1 15 36 37 38
    TOK_LLAVEDERECHA (276) 1 15 36 37 38
    TOK_ASIGNACION (277)
    TOK_MAS (278) 42
    TOK_MENOS (279) 43 46
    TOK_ASTERISCO (280) 45
    TOK_DIVISION (281) 44
    TOK_AND (282) 47
    TOK_OR (283) 48
    TOK_NOT (284) 49
    TOK_IGUAL (285) 33 34 60
    TOK_DISTINTO (286) 61
    TOK_MENORIGUAL (287) 62
    TOK_MAYORIGUAL (288) 63
    TOK_MENOR (289) 64
    TOK_MAYOR (290) 65
    TOK_CTE_ENTERA <num> (291)
    TOK_IDENTIFICADOR <str> (292) 71
    TOK_CONSTANTE_ENTERA (293) 70
    TOK_TRUE (294) 68
    TOK_FALSE (295) 69
    TOK_ERROR (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program (43)
        on left: 1
        on right: 0
    declarations (44)
        on left: 2 3
        on right: 1 3 21
    declaration (45)
        on left: 4
        on right: 2 3
    class (46)
        on left: 5 6
        on right: 4
    class_scalar (47)
        on left: 7
        on right: 5
    type (48)
        on left: 8 9
        on right: 7 10 15 20
    class_vector (49)
        on left: 10
        on right: 6
    identifiers (50)
        on left: 11 12
        on right: 4 12
    functions (51)
        on left: 13 14
        on right: 1 13
    function (52)
        on left: 15
        on right: 13
    function_params (53)
        on left: 16 17
        on right: 15 16
    remaining_function_params (54)
        on left: 18 19
        on right: 16 18
    function_param (55)
        on left: 20
        on right: 18
    function_declarations (56)
        on left: 21 22
        on right: 15
    statements (57)
        on left: 23 24
        on right: 1 15 24 36 37 38
    statement (58)
        on left: 25 26
        on right: 23 24
    simple_statement (59)
        on left: 27 28 29 30
        on right: 25
    block (60)
        on left: 31 32
        on right: 26
    assignment (61)
        on left: 33 34
        on right: 27
    vector_element (62)
        on left: 35
        on right: 34 54
    conditional (63)
        on left: 36 37
        on right: 31
    loop (64)
        on left: 38
        on right: 32
    reading (65)
        on left: 39
        on right: 28
    writing (66)
        on left: 40
        on right: 29
    function_return (67)
        on left: 41
        on right: 30
    exp (68)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 33 34 35 36 37 38 40 41 42 43 44 45 46 47 48 49 52 56 58 60 61 62 63 64 65
    exp_list (69)
        on left: 56 57
        on right: 55
    exp_remaining_list (70)
        on left: 58 59
        on right: 56 58
    comparison (71)
        on left: 60 61 62 63 64 65
        on right: 53
    constant (72)
        on left: 66 67
        on right: 51
    constant_logic (73)
        on left: 68 69
        on right: 66
    constant_int (74)
        on left: 70
        on right: 10 67
    identifier (75)
        on left: 71
        on right: 11 12 15 20 33 35 39 50 55


State 0

    0 $accept: . program $end

    TOK_MAIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: TOK_MAIN . TOK_LLAVEIZQUIERDA declarations functions statements TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA . declarations functions statements TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    declarations  go to state 8
    declaration   go to state 9
    class         go to state 10
    class_scalar  go to state 11
    type          go to state 12
    class_vector  go to state 13


State 4

    0 $accept: program $end .

    $default  accept


State 5

    8 type: TOK_INT .

    $default  reduce using rule 8 (type)


State 6

    9 type: TOK_BOOLEAN .

    $default  reduce using rule 9 (type)


State 7

   10 class_vector: TOK_ARRAY . type TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    type  go to state 14


State 8

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations . functions statements TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 15

    $default  reduce using rule 14 (functions)

    functions  go to state 16
    function   go to state 17


State 9

    2 declarations: declaration .
    3             | declaration . declarations

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 2 (declarations)

    declarations  go to state 18
    declaration   go to state 9
    class         go to state 10
    class_scalar  go to state 11
    type          go to state 12
    class_vector  go to state 13


State 10

    4 declaration: class . identifiers TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 19

    identifiers  go to state 20
    identifier   go to state 21


State 11

    5 class: class_scalar .

    $default  reduce using rule 5 (class)


State 12

    7 class_scalar: type .

    $default  reduce using rule 7 (class_scalar)


State 13

    6 class: class_vector .

    $default  reduce using rule 6 (class)


State 14

   10 class_vector: TOK_ARRAY type . TOK_CORCHETEIZQUIERDO constant_int TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 22


State 15

   15 function: TOK_FUNCTION . type identifier TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA function_declarations statements TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    type  go to state 23


State 16

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations functions . statements TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 24
    TOK_WHILE          shift, and go to state 25
    TOK_SCANF          shift, and go to state 26
    TOK_PRINTF         shift, and go to state 27
    TOK_RETURN         shift, and go to state 28
    TOK_IDENTIFICADOR  shift, and go to state 19

    statements        go to state 29
    statement         go to state 30
    simple_statement  go to state 31
    block             go to state 32
    assignment        go to state 33
    vector_element    go to state 34
    conditional       go to state 35
    loop              go to state 36
    reading           go to state 37
    writing           go to state 38
    function_return   go to state 39
    identifier        go to state 40


State 17

   13 functions: function . functions

    TOK_FUNCTION  shift, and go to state 15

    $default  reduce using rule 14 (functions)

    functions  go to state 41
    function   go to state 17


State 18

    3 declarations: declaration declarations .

    $default  reduce using rule 3 (declarations)


State 19

   71 identifier: TOK_IDENTIFICADOR .

    $default  reduce using rule 71 (identifier)


State 20

    4 declaration: class identifiers . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 42


State 21

   11 identifiers: identifier .
   12            | identifier . TOK_COMA identifiers

    TOK_COMA  shift, and go to state 43

    $default  reduce using rule 11 (identifiers)


State 22

   10 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO . constant_int TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 44

    constant_int  go to state 45


State 23

   15 function: TOK_FUNCTION type . identifier TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA function_declarations statements TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  shift, and go to state 19

    identifier  go to state 46


State 24

   36 conditional: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA
   37            | TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 47


State 25

   38 loop: TOK_WHILE . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 48


State 26

   39 reading: TOK_SCANF . identifier

    TOK_IDENTIFICADOR  shift, and go to state 19

    identifier  go to state 49


State 27

   40 writing: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 50
    TOK_MENOS                shift, and go to state 51
    TOK_NOT                  shift, and go to state 52
    TOK_IDENTIFICADOR        shift, and go to state 19
    TOK_CONSTANTE_ENTERA     shift, and go to state 44
    TOK_TRUE                 shift, and go to state 53
    TOK_FALSE                shift, and go to state 54

    vector_element  go to state 55
    exp             go to state 56
    constant        go to state 57
    constant_logic  go to state 58
    constant_int    go to state 59
    identifier      go to state 60


State 28

   41 function_return: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 50
    TOK_MENOS                shift, and go to state 51
    TOK_NOT                  shift, and go to state 52
    TOK_IDENTIFICADOR        shift, and go to state 19
    TOK_CONSTANTE_ENTERA     shift, and go to state 44
    TOK_TRUE                 shift, and go to state 53
    TOK_FALSE                shift, and go to state 54

    vector_element  go to state 55
    exp             go to state 61
    constant        go to state 57
    constant_logic  go to state 58
    constant_int    go to state 59
    identifier      go to state 60


State 29

    1 program: TOK_MAIN TOK_LLAVEIZQUIERDA declarations functions statements . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 62


State 30

   23 statements: statement .
   24           | statement . statements

    TOK_IF             shift, and go to state 24
    TOK_WHILE          shift, and go to state 25
    TOK_SCANF          shift, and go to state 26
    TOK_PRINTF         shift, and go to state 27
    TOK_RETURN         shift, and go to state 28
    TOK_IDENTIFICADOR  shift, and go to state 19

    $default  reduce using rule 23 (statements)

    statements        go to state 63
    statement         go to state 30
    simple_statement  go to state 31
    block             go to state 32
    assignment        go to state 33
    vector_element    go to state 34
    conditional       go to state 35
    loop              go to state 36
    reading           go to state 37
    writing           go to state 38
    function_return   go to state 39
    identifier        go to state 40


State 31

   25 statement: simple_statement . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 64


State 32

   26 statement: block .

    $default  reduce using rule 26 (statement)


State 33

   27 simple_statement: assignment .

    $default  reduce using rule 27 (simple_statement)


State 34

   34 assignment: vector_element . TOK_IGUAL exp

    TOK_IGUAL  shift, and go to state 65


State 35

   31 block: conditional .

    $default  reduce using rule 31 (block)


State 36

   32 block: loop .

    $default  reduce using rule 32 (block)


State 37

   28 simple_statement: reading .

    $default  reduce using rule 28 (simple_statement)


State 38

   29 simple_statement: writing .

    $default  reduce using rule 29 (simple_statement)


State 39

   30 simple_statement: function_return .

    $default  reduce using rule 30 (simple_statement)


State 40

   33 assignment: identifier . TOK_IGUAL exp
   35 vector_element: identifier . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 66
    TOK_IGUAL              shift, and go to state 67


State 41

   13 functions: function functions .

    $default  reduce using rule 13 (functions)


State 42

    4 declaration: class identifiers TOK_PUNTOYCOMA .

    $default  reduce using rule 4 (declaration)


State 43

   12 identifiers: identifier TOK_COMA . identifiers

    TOK_IDENTIFICADOR  shift, and go to state 19

    identifiers  go to state 68
    identifier   go to state 21


State 44

   70 constant_int: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 70 (constant_int)


State 45

   10 class_vector: TOK_ARRAY type TOK_CORCHETEIZQUIERDO constant_int . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 69


State 46

   15 function: TOK_FUNCTION type identifier . TOK_PARENTESISIZQUIERDO function_params TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA function_declarations statements TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 70


State 47

   36 conditional: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA
   37            | TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 50
    TOK_MENOS                shift, and go to state 51
    TOK_NOT                  shift, and go to state 52
    TOK_IDENTIFICADOR        shift, and go to state 19
    TOK_CONSTANTE_ENTERA     shift, and go to state 44
    TOK_TRUE                 shift, and go to state 53
    TOK_FALSE                shift, and go to state 54

    vector_element  go to state 55
    exp             go to state 71
    constant        go to state 57
    constant_logic  go to state 58
    constant_int    go to state 59
    identifier      go to state 60


State 48

   38 loop: TOK_WHILE TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA statements TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 50
    TOK_MENOS                shift, and go to state 51
    TOK_NOT                  shift, and go to state 52
    TOK_IDENTIFICADOR        shift, and go to state 19
    TOK_CONSTANTE_ENTERA     shift, and go to state 44
    TOK_TRUE                 shift, and go to state 53
    TOK_FALSE                shift, and go to state 54

    vector_element  go to state 55
    exp             go to state 72
    constant        go to state 57
    constant_logic  go to state 58
    constant_int    go to state 59
    identifier      go to state 60


State 49

   39 reading: TOK_SCANF identifier .

    $default  reduce using rule 39 (reading)


State 50

   52 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   53    | TOK_PARENTESISIZQUIERDO . comparison TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 50
    TOK_MENOS                shift, and go to state 51
    TOK_NOT                  shift, and go to state 52
    TOK_IDENTIFICADOR        shift, and go to state 19
    TOK_CONSTANTE_ENTERA     shift, and go to state 44
    TOK_TRUE                 shift, and go to state 53
    TOK_FALSE                shift, and go to state 54

    vector_element  go to state 55
    exp             go to state 73
    comparison      go to state 74
    constant        go to state 57
    constant_logic  go to state 58
    constant_int    go to state 59
    identifier      go to state 60


State 51

   46 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 50
    TOK_MENOS                shift, and go to state 51
    TOK_NOT                  shift, and go to state 52
    TOK_IDENTIFICADOR        shift, and go to state 19
    TOK_CONSTANTE_ENTERA     shift, and go to state 44
    TOK_TRUE                 shift, and go to state 53
    TOK_FALSE                shift, and go to state 54

    vector_element  go to state 55
    exp             go to state 75
    constant        go to state 57
    constant_logic  go to state 58
    constant_int    go to state 59
    identifier      go to state 60


State 52

   49 exp: TOK_NOT . exp
